--- a/works/viz4socialgood/description-amp-en.html
+++ b/works/viz4socialgood/description-amp-en.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
 		<link rel="canonical" href="https://kaz-ogiwara.github.io/works/viz4socialgood/description-en.html">
-    <title>"But you do not know where I came from or where I am going"</title>
+    <title>Viz for Social Good: Visualization of Human Trafficking</title>
 		<style amp-custom>
       * {
         padding: 0;
@@ -154,7 +154,7 @@
 			{
 				"@context": "http://schema.org",
 				"@type": "Article",
-				"headline": ""But you do not know where I came from or where I am going"",
+				"headline": "Viz for Social Good: Visualization of Human Trafficking",
 				"image": [
 					"https://kaz-ogiwara.github.io/assets/img/eyecatch_viz4socialgood.png"
 				]
@@ -172,8 +172,8 @@
       </div>
       <div id="title-block">
         <div class="date">July 2018</div>
-        <h1>"But you do not know where I came from or where I am going"</h1>
-        <h3>Viz for Social Good: Visualization of Human Trafficking</h3>
+        <h1>Viz for Social Good: Visualization of Human Trafficking</h1>
+        <h3>"But you do not know where I came from or where I am going"</h3>
       </div>
       <div id="eyecatch-block">
         <a href="https://kaz-ogiwara.github.io/works/viz4socialgood/">
@@ -183,8 +183,9 @@
       <div id="article-block">
         <p>Interactive sankey diagram, map and details for <a href="https://www.vizforsocialgood.com/" target="_blank">Viz for Social Good</a></p>
         <p>By hovering (or tapping) side bar, detailed information about the people from / to the country is shown.</p>
+        <p><img src="img/description01.png"></p>
         <p>Data source: <a href="https://www.ctdatacollaborative.org/" target="_blank">The Counter-Trafficking Data Collaborative</a> (CTDC)</p>
-        <p>Languages and libraries: JavaScript (P5.js, jQuery), SQL (MySQL) and PHP for retrieving and shaping data</p>
+        <p>Languages and libraries: JavaScript (P5.js, jQuery), SQL (MySQL) for retrieving and shaping data</p>
         <p id="seetheapp"><a class="button" href="https://kaz-ogiwara.github.io/works/viz4socialgood/">See the App</a></p>
         <p class="disclaimer">The app may not be available in your system environment.</p>
       </div>
