--- a/works/viz4socialgood/index.html
+++ b/works/viz4socialgood/index.html
@@ -4,16 +4,16 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="How and why the job security of elementary and junior high school teachers is collapsing">
+    <meta name="description" content="Interactive sankey diagram, map and details of Human Trafficking">
 		<meta property="og:url" content="https://kaz-ogiwara.github.io/viz/teachers/" />
 		<meta property="og:type" content="article" />
-		<meta property="og:title" content="Schools are depending on part-time teachers" />
-		<meta property="og:description" content="How and why the job security of elementary and junior high school teachers is collapsing" />
+		<meta property="og:title" content="Viz for Social Good: Visualization of Human Trafficking" />
+		<meta property="og:description" content="Interactive sankey diagram, map and details of Human Trafficking" />
 		<meta property="og:image" content="https://kaz-ogiwara.github.io/assets/img/eyecatch_teachers.png" />
 		<meta name="twitter:card" content="summary_large_image" />
 		<link rel="stylesheet" href="../../assets/css/default.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>Viz for Social Good - kaz-ogiwara.github.io</title>
+    <title>Viz for Social Good: Visualization of Human Trafficking - kaz-ogiwara.github.io</title>
   </head>
   <body>
     <div id="container">
@@ -24,8 +24,8 @@
 				</a>
 			</div>
 			<div id="title-block">
-				<h1>"But you do not know where I came from or where I am going"</h1>
-				<h5>Viz for Social Good: Visualization of Human Trafficking</h5>
+				<h1>Viz for Social Good: Visualization of Human Trafficking</h1>
+				<h5>"But you do not know where I came from or where I am going"</h5>
 				<p>- Interactive sankey diagram, map and details for <a href="https://www.vizforsocialgood.com/" target="_blank">Viz for Social Good</a></p>
 				<p>- By hovering (or tapping) side bar, detailed information about the people from / to the country is shown.</p>
 				<p>- This visualization is optimized for PC (with 960+px width), sorry!</p>
