--- a/about/index.html
+++ b/about/index.html
@@ -4,28 +4,28 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
-    <meta property="og:url" content="http://localhost:8888/kaz-ogiwara.github.io/works/" />
+    <meta property="og:url" content="https://kaz-ogiwara.github.io/works/" />
     <meta property="og:type" content="article" />
     <meta property="og:title" content="Works - Kazuki OGIWARA" />
     <meta property="og:description" content="My works of data visualization" />
-    <meta property="og:image" content="http://localhost:8888/kaz-ogiwara.github.io/assets/img/eyecatch_works.png" />
+    <meta property="og:image" content="https://kaz-ogiwara.github.io/assets/img/eyecatch_works.png" />
     <meta name="twitter:card" content="summary_large_image" />
     <title></title>
 		<link rel="amphtml" href="">
-    <link rel="stylesheet" href="http://localhost:8888/kaz-ogiwara.github.io/assets/css/style.css">
+    <link rel="stylesheet" href="https://kaz-ogiwara.github.io/assets/css/style.css">
 	</head>
 	<body>
 		<div id="container">
 		<div id="icons-block">
 			<div id="icons-left">
-				<a href="http://localhost:8888/kaz-ogiwara.github.io/">
+				<a href="https://kaz-ogiwara.github.io/">
 					<i class="material-icons" id="icon-home">home</i>
 				</a>
 			</div>
 			<div id="icons-right">
-				<div class="text-menu"><a href="http://localhost:8888/kaz-ogiwara.github.io/works/">Works</a></div>
+				<div class="text-menu"><a href="https://kaz-ogiwara.github.io/works/">Works</a></div>
 				<div class="separator">|</div>
-				<div class="text-menu"><a href="http://localhost:8888/kaz-ogiwara.github.io/about/">About</a></div>
+				<div class="text-menu"><a href="https://kaz-ogiwara.github.io/about/">About</a></div>
 			</div>
 		</div>
       <div id="pjax-content" class="works">
@@ -109,6 +109,6 @@
       </div>
 		</div>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <script src="http://localhost:8888/kaz-ogiwara.github.io/assets/js/script.js"></script>
+    <script src="https://kaz-ogiwara.github.io/assets/js/script.js"></script>
   </body>
 </html>
